--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,8 @@ repositories {
 
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
-    testImplementation ('org.junit.jupiter:junit-jupiter')
-    testImplementation ('org.junit.jupiter:junit-jupiter:5.8.1')
-    testImplementation ('org.mockito:mockito-core:4.0.0')
+    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.1.1'
 }
 
 test {
